# pipercard

./: .gitignore  .pre-commit-config.yaml  README.md  index.html  main.py  pyproject.toml  style.css
buttons/: buttons.html  buttons.py
data/: project_data.json
hello/: hello.html
pypercard/: main.py  pypercard N.html  pypercard.html  pyscript.toml
