[tool.poetry]
name = "pyscript-playground"
version = "0.1.0"
description = "A basic exploration of PyScript and what it can do."
authors = ["hundredvisionsguy <cwinikka@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
ruff = "^0.0.263"
black = "^23.3.0"
pre-commit = "^3.2.2"

[tool.poetry.dev-dependencies]
ruff = "^0.0.263"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 86